<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout
        style="@style/textInputLayoutTheme"
        android:layout_marginTop="40dp"
        android:hint="@string/mobile_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile"
            style="@style/textInputEditTextTheme"
            android:inputType="number"/>

    </com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout>

    <com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout
        style="@style/textInputLayoutTheme"
        android:hint="@string/new_password"
        android:visibility="gone"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            style="@style/textInputEditTextTheme" />

    </com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout>

    <com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout
        style="@style/textInputLayoutTheme"
        android:hint="@string/confirm_password"
        android:visibility="gone"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            style="@style/textInputEditTextTheme" />

    </com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout>

    <org.mmtextview.components.MMButton
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:text="@string/msg_continue"
        android:textColor="@color/md_white_1000" />

</LinearLayout>