<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.TransactionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_transaction_label"
            style="@style/textView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/transaction_history"
            android:textSize="17sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_transaction_label"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <org.mmtextview.components.MMTextView
                        android:id="@+id/tv_from_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/from_date" />

                    <org.mmtextview.components.MMButton
                        android:id="@+id/btn_from_date"
                        style="@style/date_button_style"
                        android:hint="@string/from_date"
                        android:textColorHint="@color/md_white_1000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <org.mmtextview.components.MMTextView
                        android:id="@+id/tv_to_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/to_date" />

                    <org.mmtextview.components.MMButton
                        android:id="@+id/btn_to_date"
                        style="@style/date_button_style"
                        android:hint="@string/to_date"
                        android:textColorHint="@color/md_white_1000" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number" />

                <com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ph_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_person_black_24dp"
                        android:inputType="number" />
                </com.frontiertechnologypartners.mykyat_topup.widget.MMTextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_operator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/operator" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/operator_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background" />
            </LinearLayout>

            <org.mmtextview.components.MMButton
                android:id="@+id/btn_search"
                style="@style/search_button_style"
                android:text="@string/search" />
        </LinearLayout>

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_total_Amount"
            style="@style/textView"
            android:layout_below="@+id/filter_layout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"
            android:visibility="gone"
            tools:text="total sales" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_total_commission"
            style="@style/textView"
            android:layout_below="@+id/tv_total_Amount"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"
            android:visibility="gone"
            tools:text="Total Commission" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transaction_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_total_commission"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_no_transaction"
            style="@style/textView"
            android:layout_below="@+id/filter_layout"
            android:layout_marginTop="10dp"
            android:text="@string/have_no_transaction"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>